# fundai

./: .gitignore  docker-compose.yml  load_funda.ipynb  pyproject.toml
.github/workflows/: pytest.yml
src/fundai/: __init__.py  db.py  main.py  scraper.py  utils.py
src/fundai/dashboard/: app.py
tests/: raw_page_content.txt  raw_search_page.txt  structured_page_content.txt  test_json_insert.py  test_scraper.py
